--- a/app/src/main/res/layout/grid_item_dashboard.xml
+++ b/app/src/main/res/layout/grid_item_dashboard.xml
@@ -10,10 +10,8 @@
         android:id="@+id/grid_item_card_view"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginStart="3dp"
-        card_view:cardElevation="6dp"
-        card_view:cardUseCompatPadding="true">
+        android:layout_margin="6dp"
+        card_view:cardCornerRadius="0dp">
 
         <RelativeLayout
             android:id="@+id/grid_item_content"
