--- a/app/src/main/res/layout/list_item_dashboard.xml
+++ b/app/src/main/res/layout/list_item_dashboard.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/grid_item_container"
+    android:id="@+id/dashboard_item_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/grid_item_card_view"
+        android:id="@+id/dashboard_item_card_view"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_margin="6dp"
@@ -20,7 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/grid_item_icon"
+                android:id="@+id/dashboard_item_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -28,10 +28,10 @@
                 android:tint="@android:color/white" />
 
             <TextView
-                android:id="@+id/grid_item_title"
+                android:id="@+id/dashboard_item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/grid_item_icon"
+                android:layout_below="@+id/dashboard_item_icon"
                 android:layout_centerHorizontal="true"
                 android:textColor="@android:color/white" />
 
