Change option view implementation - use radio button instead of toggle button

--- a/app/src/main/res/layout/list_item_option.xml
+++ b/app/src/main/res/layout/list_item_option.xml
@@ -5,9 +5,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ToggleButton
+    <RadioButton
         android:id="@+id/option_value"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
