Refactor dashboard UI

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,7 @@
     <!--  Category A -->
     <RelativeLayout
         android:id="@+id/item_category_a"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dashboard_item_size"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/item_category_c"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,11 +27,11 @@
             android:src="@drawable/ic_motorcycle_white_48dp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/button_category_a"
-            android:layout_centerHorizontal="true"
-            android:padding="6dp"
+            android:gravity="center"
+            android:paddingTop="6dp"
             android:text="@string/category_a_label"
             android:textSize="@dimen/dashboard_item_label_text_size" />
 
@@ -40,7 +40,7 @@
     <!--  Category B -->
     <RelativeLayout
         android:id="@+id/item_category_b"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dashboard_item_size"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/item_category_d"
         app:layout_constraintLeft_toRightOf="@+id/item_category_a"
@@ -59,8 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/button_category_b"
-            android:layout_centerHorizontal="true"
-            android:padding="6dp"
+            android:gravity="center"
+            android:paddingTop="6dp"
             android:text="@string/category_b_label"
             android:textSize="@dimen/dashboard_item_label_text_size" />
 
@@ -69,7 +69,7 @@
     <!--  Category C -->
     <RelativeLayout
         android:id="@+id/item_category_c"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dashboard_item_size"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/item_category_t"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -89,7 +89,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/button_category_c"
             android:layout_centerHorizontal="true"
-            android:padding="6dp"
+            android:gravity="center"
+            android:paddingTop="6dp"
             android:text="@string/category_c_label"
             android:textSize="@dimen/dashboard_item_label_text_size" />
 
@@ -98,7 +99,7 @@
     <!--  Category D -->
     <RelativeLayout
         android:id="@+id/item_category_d"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dashboard_item_size"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/item_rate_app"
         app:layout_constraintLeft_toRightOf="@+id/item_category_c"
@@ -118,7 +119,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/button_category_d"
             android:layout_centerHorizontal="true"
-            android:padding="6dp"
+            android:gravity="center"
+            android:paddingTop="6dp"
             android:text="@string/category_d_label"
             android:textSize="@dimen/dashboard_item_label_text_size" />
 
@@ -127,7 +129,7 @@
     <!--  Category T -->
     <RelativeLayout
         android:id="@+id/item_category_t"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dashboard_item_size"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -147,7 +149,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/button_category_t"
             android:layout_centerHorizontal="true"
-            android:padding="6dp"
+            android:gravity="center"
+            android:paddingTop="6dp"
             android:text="@string/category_t_label"
             android:textSize="@dimen/dashboard_item_label_text_size" />
 
@@ -156,7 +159,7 @@
     <!--  Rate app -->
     <RelativeLayout
         android:id="@+id/item_rate_app"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dashboard_item_size"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/item_category_t"
@@ -176,7 +179,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/button_rate_app"
             android:layout_centerHorizontal="true"
-            android:padding="6dp"
+            android:gravity="center"
+            android:paddingTop="6dp"
             android:text="@string/rate_app_label"
             android:textSize="@dimen/dashboard_item_label_text_size" />
 
