--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dashboard_item_size">90dp</dimen>
     <dimen name="dashboard_item_button_size">90dp</dimen>
     <dimen name="dashboard_item_label_text_size">16sp</dimen>
 </resources>
