--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DashboardItem">
+        <item name="android:layout_width">@dimen/dashboard_item_total_width</item>
+        <item name="android:layout_height">@dimen/dashboard_item_total_height</item>
+        <item name="android:gravity">bottom|center</item>
+        <item name="android:background">@drawable/round_button</item>
+        <item name="android:textSize">@dimen/dashboard_item_label_text_size</item>
+    </style>
+
 </resources>
