--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -7,27 +7,25 @@
     tools:context="com.dfirago.dlt.category.CategoryActivity">
 
     <!--  Training -->
-    <ImageButton
+    <Button
         android:id="@+id/item_training"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:background="@drawable/round_button"
-        android:src="@drawable/ic_school_white_48dp"
-        app:layout_constraintRight_toLeftOf="@+id/item_assignment"
-        app:layout_constraintLeft_toLeftOf="parent"
+        style="@style/DashboardItem"
+        android:drawableTop="@drawable/ic_school_white_48dp"
+        android:text="@string/training_label"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/item_assignment"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--  Assignment -->
-    <ImageButton
+    <Button
         android:id="@+id/item_assignment"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:background="@drawable/round_button"
-        android:src="@drawable/ic_assignment_white_48dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/item_training"
+        style="@style/DashboardItem"
+        android:drawableTop="@drawable/ic_assignment_white_48dp"
+        android:text="@string/assignment_label"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/item_training"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
