--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dfirago.dlt.dashboard.DashboardFragment">
+    tools:context="com.dfirago.dlt.dashboard.fragment.DashboardFragment">
 
-    <!--  Category A -->
+    <!--  CategoryType A -->
     <Button
         android:id="@+id/item_category_a"
         style="@style/DashboardItem"
@@ -17,7 +17,7 @@
         app:layout_constraintRight_toLeftOf="@+id/item_category_b"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--  Category B -->
+    <!--  CategoryType B -->
     <Button
         android:id="@+id/item_category_b"
         style="@style/DashboardItem"
@@ -28,7 +28,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--  Category C -->
+    <!--  CategoryType C -->
     <Button
         android:id="@+id/item_category_c"
         style="@style/DashboardItem"
@@ -39,7 +39,7 @@
         app:layout_constraintRight_toLeftOf="@+id/item_category_d"
         app:layout_constraintTop_toBottomOf="@+id/item_category_a" />
 
-    <!--  Category D -->
+    <!--  CategoryType D -->
     <Button
         android:id="@+id/item_category_d"
         style="@style/DashboardItem"
@@ -50,7 +50,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_category_b" />
 
-    <!--  Category T -->
+    <!--  CategoryType T -->
     <Button
         android:id="@+id/item_category_t"
         style="@style/DashboardItem"
