--- a/app/src/main/res/layout/fragment_image_question.xml
+++ b/app/src/main/res/layout/fragment_image_question.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.dfirago.dlt.fragment.ImageQuestionFragment">
+    tools:context="com.dfirago.dlt.fragments.questions.ImageQuestionFragment">
 
     <ImageView
         android:id="@+id/question_image"
