Replace question-fragments with question-views in order to dynamically show them on the fragment-screen

--- a/app/src/main/res/layout/view_video_question.xml
+++ b/app/src/main/res/layout/view_video_question.xml
@@ -1,12 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.dfirago.dlt.fragments.questions.ImageQuestionFragment">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/question_image"
+    <VideoView
+        android:id="@+id/question_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -19,8 +14,8 @@
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/options_recycler_view"
+        android:id="@+id/response_options"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+</merge>
