--- a/app/src/main/res/layout/view_image_question.xml
+++ b/app/src/main/res/layout/view_image_question.xml
@@ -1,9 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.dfirago.dlt.fragments.questions.SimpleQuestionFragment">
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/question_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:contentDescription="@null"
+        android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/question_value"
@@ -11,7 +17,7 @@
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/options_recycler_view"
+        android:id="@+id/response_options"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
