--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#00AA8D</color>
     <color name="colorPrimaryDark">#00BF9A</color>
     <color name="colorAccent">#008975</color>
+
+    <color name="colorOptionCorrect">#008975</color>
+    <color name="colorOptionWrong">#E72D39</color>
 </resources>
