--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -6,9 +6,21 @@
     tools:context="com.dfirago.drivinglicensetest.fragments.TrainingFragment">
 
     <LinearLayout
-        android:id="@+id/question_view_container"
+        android:id="@+id/header_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+    <LinearLayout
+        android:id="@+id/question_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+    <LinearLayout
+        android:id="@+id/footer_container"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical" />
 
 </LinearLayout>
