--- a/app/src/main/res/layout/view_video_question.xml
+++ b/app/src/main/res/layout/view_video_question.xml
@@ -1,4 +1,7 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <VideoView
         android:id="@+id/question_video"
@@ -18,4 +21,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</merge>
+</LinearLayout>
