Add training header, replace compound views with nested layouts for training header/footer

--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     tools:context="com.dfirago.drivinglicensetest.fragments.TrainingFragment">
 
-    <View
+    <include
         android:id="@+id/header_container"
-        android:layout_width="match_parent"
+        layout="@layout/training_header"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/question_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -17,19 +17,20 @@
 
     <View
         android:id="@+id/question_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="6dp"
         app:layout_constraintBottom_toTopOf="@+id/footer_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/header_container" />
+        app:layout_constraintTop_toBottomOf="@+id/header_container"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 
-    <View
+    <include
         android:id="@+id/footer_container"
-        android:layout_width="match_parent"
+        layout="@layout/training_footer"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
