--- a/app/src/main/res/layout/view_video_question.xml
+++ b/app/src/main/res/layout/view_video_question.xml
@@ -3,13 +3,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <VideoView
+    <TextureView
         android:id="@+id/question_video"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:contentDescription="@null"
-        android:scaleType="fitCenter" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/question_value"
