Add response options styling

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="colorOptionCorrect">#008975</color>
     <color name="colorOptionWrong">#E72D39</color>
+    <color name="colorOptionNormal">#EEEEEE</color>
+    <color name="colorOptionNormalStroke">#9E9E9E</color>
 </resources>
