--- a/app/src/main/res/layout/list_item_option.xml
+++ b/app/src/main/res/layout/list_item_option.xml
@@ -5,8 +5,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <RadioButton
+    <com.dfirago.drivinglicensetest.common.widget.ResponseOptionButton
         android:id="@+id/option_value"
+        style="@style/QuestionViewOption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
