--- a/app/src/main/res/layout/view_image_question.xml
+++ b/app/src/main/res/layout/view_image_question.xml
@@ -13,6 +13,7 @@
 
     <TextView
         android:id="@+id/question_value"
+        style="@style/QuestionViewText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
