--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -15,6 +15,23 @@
         <item name="android:paddingTop">@dimen/dashboard_item_icon_padding_top</item>
         <item name="android:background">@drawable/dashboard_item_selector</item>
         <item name="android:textSize">@dimen/dashboard_item_label_text_size</item>
+    </style>
+
+    <style name="QuestionViewText">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:padding">6dp</item>
+    </style>
+
+    <style name="QuestionViewOption">
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:background">@drawable/response_option_selector</item>
+        <item name="android:button">@null</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/response_option_text_color_selector</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
 </resources>
