--- a/app/src/main/res/drawable/response_option_normal.xml
+++ b/app/src/main/res/drawable/response_option_normal.xml
@@ -2,9 +2,8 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorOptionNormal" />
-            <corners android:radius="4dp" />
+            <corners android:radius="@dimen/response_option_button_radius" />
             <stroke
-                android:width="0.5dp"
                 android:color="@color/colorOptionNormalStroke" />
         </shape>
     </item>
