--- a/app/src/main/res/drawable/response_option_selected.xml
+++ b/app/src/main/res/drawable/response_option_selected.xml
@@ -2,7 +2,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorOptionNormal" />
-            <corners android:radius="4dp" />
+            <corners android:radius="@dimen/response_option_button_radius" />
             <stroke
                 android:width="2dp"
                 android:color="@color/colorPrimary" />
