--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -8,15 +8,15 @@
     <include
         android:id="@+id/header_container"
         layout="@layout/training_header"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/question_container"
+        app:layout_constraintBottom_toTopOf="@+id/scrollable_content_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/question_container"
+    <ScrollView
+        android:id="@+id/scrollable_content_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="6dp"
@@ -24,16 +24,23 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header_container"
-        app:layout_constraintVertical_chainStyle="spread_inside" />
+        app:layout_constraintVertical_chainStyle="spread_inside">
+
+        <View
+            android:id="@+id/question_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </ScrollView>
 
     <include
         android:id="@+id/footer_container"
         layout="@layout/training_footer"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question_container" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollable_content_container" />
 
 </android.support.constraint.ConstraintLayout>
