--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="dashboard_item_circle_left">10dp</dimen>
     <dimen name="dashboard_item_circle_right">10dp</dimen>
     <dimen name="dashboard_item_label_text_size">14sp</dimen>
+    <dimen name="response_option_button_radius">2dp</dimen>
 </resources>
