--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,15 +23,21 @@
         <item name="android:padding">6dp</item>
     </style>
 
-    <style name="QuestionViewOption">
+    <style name="QuestionViewOption" parent="Widget.AppCompat.Button">
         <item name="android:layout_margin">4dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
         <item name="android:background">@drawable/response_option_selector</item>
         <item name="android:button">@null</item>
-        <item name="android:padding">12dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/response_option_text_color_selector</item>
-        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="QuestionViewFooterButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:tint">@color/colorPrimary</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
 </resources>
