--- a/app/src/main/res/layout/fragment_exam.xml
+++ b/app/src/main/res/layout/fragment_exam.xml
@@ -3,36 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dfirago.drivinglicensetest.fragments.ExamFragment">
+    tools:context="com.dfirago.drivinglicensetest.fragments.TrainingFragment">
 
-    <View
+    <include
         android:id="@+id/header_container"
+        layout="@layout/exam_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/question_container"
+        app:layout_constraintBottom_toTopOf="@+id/scrollable_content_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/question_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+    <ScrollView
+        android:id="@+id/scrollable_content_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="6dp"
         app:layout_constraintBottom_toTopOf="@+id/footer_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/header_container" />
+        app:layout_constraintTop_toBottomOf="@+id/header_container"
+        app:layout_constraintVertical_chainStyle="spread_inside">
 
-    <View
+        <View
+            android:id="@+id/question_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </ScrollView>
+
+    <include
         android:id="@+id/footer_container"
+        layout="@layout/exam_footer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question_container" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollable_content_container" />
 
 </android.support.constraint.ConstraintLayout>
