--- a/app/src/main/res/layout/fragment_exam.xml
+++ b/app/src/main/res/layout/fragment_exam.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="6dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toTopOf="@+id/footer_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
